--- a/frontend-react/src/components/Navbar.css
+++ b/frontend-react/src/components/Navbar.css
@@ -45,3 +45,8 @@ ul {
     font-weight:normal;
     font-family: 'Roboto','Helvetica Neue', sans-serif;
   }
+
+  p {
+    float:right;
+    margin: 50px;
+  }
